# soundgraft

./: .gitignore  .superpowers-session.json  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  conftest.py  pyproject.toml  requirements.txt  sound_fixer.py
docs/superpowers/plans/: 2026-03-31-sound-fixer.md  2026-06-29-partial-overlap-alignment.md  2026-06-29-shotgun-alignment-candidates.md
docs/superpowers/specs/: 2026-03-31-sound-fixer-design.md  2026-06-29-partial-overlap-alignment-design.md  2026-06-29-shotgun-alignment-candidates-design.md
src/soundgraft/: __init__.py  cli.py
tests/: test_cli.py  test_correlate.py  test_identify.py  test_impulse.py  test_keyframe.py  test_overlap.py  test_reconstitute.py  test_shotgun.py
