[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "soundgraft"
version = "0.3.1"
description = "Replace video audio with high-quality dedicated recordings"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "tqdm",
    "librosa",
]

[project.scripts]
soundgraft = "soundgraft.cli:main"

[project.urls]
Homepage = "https://github.com/csillag/soundgraft"

[project.optional-dependencies]
dev = [
    "build",
    "twine",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
